2005-09-20  Stefan Kost  <ensonic@users.sf.net>

	* doc/README:
	* doc/authors.txt:
	* doc/gnome.txt:
	* doc/sections-file.txt:
	* doc/setting-up.txt:
	* doc/style-guide.txt:
	* gtkdoc-common.pl.in:
          adding a note about where the new docs are

2005-09-15  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): 
	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): patch from dodji seketeli to handle
	functions returning explicit enums. (#303337)

        Patch from Stepan Kasal:

	* gtkdoc-mkhtml.in, gtkdoc-mkman.in, gtkdocize.in: Add datarootdir
	variable, for compatibility with future Autoconf releases.

	* configure.in (PACKAGE_DATA_DIR): Simplify the computation;
	use a local macro AC_DEFINE_DIR, based on a macro from Autoconf
	macro archive. (#313876)

2005-09-15  Damon Chaplin  <damon@gnome.org>
	
	* gtkdoc-scangobj.in: Patch from Stepan Kasal to avoid some gcc
	warnings. (#312985)
	
	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: Use brackets around open() arguments to avoid
	precedence problems. (#314838)

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: Output more messages about compilation, linking
	and running of scanner, to try to help track down any problems.
	Also use "sh -c" to run the scanner (#167688)

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: patch from Stefan Kost to improve error messages,
	though I changed it slightly so it doesn't output errno.

2005-09-09  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in: 
	* style.css: 
	* gtk-doc.xsl: Use a fixed navigation bar at the top of the page.
	Patch from Stefan Kost with minor changes by me. (#313569)

2005-08-18  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scangobj.in: added "const" in a few places to avoid lots
	of warnings if all gcc warnings are on. (#312985)

2005-08-15  Stefan Kost  <ensonic@users.sf.net>

	* COPYING-DOCS:
	* Makefile.am:
	* configure.in:
	* omf.make:
	* xmldocs.make: